fix logo alignment

--- a/assets/scss/01-atoms/_site-logo.scss
+++ b/assets/scss/01-atoms/_site-logo.scss
@@ -5,8 +5,6 @@
   a {
     display: flex;
     font-size: 0px;
-    width: 164px;// total: 164 x 45
-    margin: 0 auto;
     align-items: center;
 
 
