--- a/assets/scss/03-organisms/_footer-slim.scss
+++ b/assets/scss/03-organisms/_footer-slim.scss
@@ -15,6 +15,29 @@
   &__container {
     position: relative;
 
+    &__logos {
+
+
+      &--stacked {
+        display: flex;
+        flex-direction: row;
+
+        & > * {
+          margin-right: 1rem;
+        }
+      }
+
+
+      // .ma__site-logo {
+      //   position: absolute;
+      //   top: 0;
+      //
+      //   span {
+      //     display: none;
+      //   }
+      // }
+    }
+
     &__inner {
       display: flex;
       flex-direction: column;
@@ -25,19 +48,12 @@
         align-items: flex-start;
         justify-content: space-between;
         margin: 0;
-        padding: 0.75rem 0 0 3.5rem;
+        //padding: 0.75rem 0 0 3.5rem;
       }
     }
   }
 
-  .ma__site-logo {
-    position: absolute;
-    top: 0;
 
-    span {
-      display: none;
-    }
-  }
 
   &__info {
     max-width: 500px;
