--- a/assets/scss/04-templates/_narrow-template.scss
+++ b/assets/scss/04-templates/_narrow-template.scss
@@ -113,11 +113,15 @@ $narrow-template-header-height: 170px;
   &__header {
 
     @include ma-container;
+    display: flex;
+      flex-direction: column;
+      align-items: center;
     height: $narrow-template-header-height;
     font-size: 0;
     max-width: $narrow-template-max-width;
     padding-top: 45px;
     position: relative;
+
   }
 
   &__container {
